Add lazy loading skeleton to jupiter terminal.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,20 @@ p {
   }
 }
 
+.shimmer {
+  position: relative;
+  overflow: hidden;
+
+  @apply before:absolute
+         before:inset-0
+         before:-translate-x-full
+         before:animate-[shimmer_2s_infinite]
+         before:bg-gradient-to-r
+         before:from-transparent
+         before:via-white/60
+         before:to-transparent;
+}
+
 @media only screen and (max-width: 991px) {
   body {
     --line-height: 1.2;
