--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -8,7 +8,8 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
+  min-height: 100lvh;
   padding: 12vw var(--pad-h-clamp);
   font-size: var(--font-size-clamp);
 
@@ -196,7 +197,8 @@
 
   .content {
     width: 50%;
-    min-height: 100vh;
+    min-height: calc(var(--vh, 1vh) * 100);
+    min-height: 100lvh;
     padding: min(calc(20% + 2.7em), calc(var(--headline-max-width) / 4)) var(--pad-h-clamp);
   }
 
@@ -278,7 +280,7 @@
 
   .content {
     position: absolute;
-    left: max(38%, 70vh);
+    left: max(38%, calc(var(--vh, 1vh) * 70));
     bottom: 100px;
     padding-right: var(--pad-h-clamp);
   }
