--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,7 +9,6 @@
   align-items: center;
   width: 100%;
   min-height: calc(var(--vh, 1vh) * 100);
-  min-height: 100lvh;
   padding: 10vw var(--pad-h-clamp);
   font-size: var(--font-size-clamp);
 
@@ -59,7 +58,7 @@
 .first {
   padding-left: 0;
   padding-right: 0;
-  min-height: 100svh;
+  min-height: calc(var(--vh, 1svh) * 100);
 
   .mainLogos {
     position: relative;
@@ -202,7 +201,6 @@
   .content {
     width: 50%;
     min-height: calc(var(--vh, 1vh) * 100);
-    min-height: 100lvh;
     padding: min(calc(20% + 2.7em), calc(var(--headline-max-width) / 4)) var(--pad-h-clamp);
   }
 
