--- a/src/components/dex-chart/dex-chart.module.css
+++ b/src/components/dex-chart/dex-chart.module.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   height: calc(100vh - 5em);
+  min-height: 460px;
   background-color: var(--dark-background);
 
   .iframe {
