--- a/src/components/dex-chart/dex-chart.module.css
+++ b/src/components/dex-chart/dex-chart.module.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 5em);
+  height: calc((var(--vh, 1vh) * 100) - 5em);
   min-height: 460px;
   background-color: var(--dark-background);
 
