--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -201,7 +201,7 @@
   .content {
     width: 50%;
     min-height: calc(var(--vh, 1vh) * 100);
-    padding: min(calc(20% + 2.7em), calc(var(--headline-max-width) / 4)) var(--pad-h-clamp);
+    padding: min(calc(21.5% + 2em), calc(var(--headline-max-width) * .254)) var(--pad-h-clamp);
   }
 
   @media only screen and (max-width: 991px) {
@@ -215,7 +215,7 @@
     .content {
       width: 100%;
       min-height: 0;
-      padding-bottom: max(15%, 90px);
+      padding-bottom: max(calc(9% + 3em), 72px);
     }
   }
 }
