--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,11 +4,15 @@
 
 :root {
   --dark-background: #111116;
+  --dark-background-lighter: #212128;
+  --dark-border-color: #333;
+  --error-color: #f45b5b;
   --foreground: #FAF3E4;
   --hover-background: rgba(255, 255, 255, 0.25);
   --hover-foreground: #000;
   --section-blue: #1F48C7;
   --section-orange: #E43A13;
+  --success-color: #b0dc73;
   --text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
 
   --desktop-width-min: 992px;
@@ -78,5 +82,13 @@
 
   .text-balance {
     text-wrap: balance;
+  }
+
+  .positive {
+    color: var(--success-color);
+  }
+
+  .negative {
+    color: var(--error-color);
   }
 }
