--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -36,7 +36,7 @@
     }
 
     .start > *,
-    .end > * {
+    .end .navLink {
       &:hover {
         text-shadow: none;
       }
@@ -66,7 +66,7 @@
 }
 
 .start > *,
-.end > * {
+.end > .navLink {
   border-radius: 5px;
   padding: 3px 10px;
   height: 32px;
@@ -84,21 +84,10 @@
     display: inline-block;
     vertical-align: top;
   }
+}
 
-  .iconLink {
-    box-sizing: content-box;
-    width: 1.3em;
-    height: 1.3em;
-    top: -5px;
-    border-radius: 50%;
-    padding: 10px;
-
-    &:hover {
-      & > img {
-        filter: invert(100%);
-      }
-    }
-  }
+.socialLink {
+  top: -5px;
 }
 
 @media only screen and (min-width: 992px) {
@@ -192,13 +181,13 @@
   .end {
     margin-top: 0.5em;
 
-    & > * {
+    .navLink {
       display: block;
       margin-left: 0;
       padding: 2px 0;
     }
 
-    .iconLink {
+    .socialLink {
       display: inline-block;
       margin-left: 0;
       margin-right: 15px;
