Add lazy loading mask to city index. Have city index refresh every 10s.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,19 +66,7 @@
 }
 
 @layer utilities {
-  .shimmer {
-    position: relative;
-    overflow: hidden;
-
-    @apply before:absolute
-           before:inset-0
-           before:-translate-x-full
-           before:animate-[shimmer_2s_infinite]
-           before:bg-gradient-to-r
-           before:from-transparent
-           before:via-white/60
-           before:to-transparent;
-  }
+  @import './utilities.module.css';
 
   .text-balance {
     text-wrap: balance;
