--- a/src/components/city-index/city-index.module.css
+++ b/src/components/city-index/city-index.module.css
@@ -65,6 +65,10 @@
     & > tr > td {
       padding: 30px var(--padding-h);
     }
+
+    & > tr.featured {
+      box-shadow: inset 0 0 12px rgba(255, 255, 255, 0.33);
+    }
   }
 
   .coinContent {
