Improve background load view.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,7 @@
   --hover-foreground: #000;
   --section-blue: #1F48C7;
   --section-orange: #E43A13;
+  --section-yellow: #F8BB02;
   --success-color: #b0dc73;
   --text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
 
